Remove forbidden apis and fix checkstyle