@@ -8,6 +8,7 @@
 
 package org.sosy_lab.cpachecker.cpa.smg.evaluator;
 
+import com.google.common.collect.ImmutableList;
 import java.util.List;
 import org.sosy_lab.cpachecker.cfa.ast.c.CFunctionCallExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CLemmaFunctionCall;
@@ -37,7 +38,7 @@ public class LValueAssignmentVisitor extends AddressVisitor {
 
   @Override
   public List<SMGAddressAndState> visit(CLemmaFunctionCall pCLemmaFunctionCall) {
-    return List.of();
+    return ImmutableList.of();
   }
 
   @Override
