@@ -10,6 +10,7 @@ package org.sosy_lab.cpachecker.util.variableclassification;
 
 import static com.google.common.base.Preconditions.checkNotNull;
 
+import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Sets;
 import java.math.BigInteger;
 import java.util.Set;
@@ -199,6 +200,6 @@ class VariablesCollectingVisitor implements CExpressionVisitor<Set<String>, NoEx
 
   @Override
   public Set<String> visit(CLemmaFunctionCall pCLemmaFunctionCall) {
-    return Set.of();
+    return ImmutableSet.of();
   }
 }
